display_dep = subproject('display').get_variable('display_dep')

executable(
    'example_direct1d',
    'example_direct1d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_direct2d',
    'example_direct2d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_direct3d',
    'example_direct3d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_grid1d',
    'example_grid1d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_grid2d',
    'example_grid2d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_grid3d',
    'example_grid3d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_tree1d',
    'example_tree1d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_tree2d',
    'example_tree2d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)

executable(
    'example_tree3d',
    'example_tree3d.f90',
    link_with: nnps_lib,
    dependencies: display_dep,
)